2398.	[bug]           Improve file descriptor management.  New,
			temporary, named.conf option reserved-sockets,
			default 512. [RT #18344]

2396.	[bug]		Don't set SO_REUSEADDR for randomized ports.
			[RT #18336]

2395.	[port]		Avoid warning and no effect from "files unlimited"
			on Linux when running as root. [RT #18335]

2394.	[bug]		Default configuration options set the limit for
			open files to 'unlimited' as described in the
			documentation. [RT #18331]

2322.	[port]		MacOS: work around the limitation of setrlimit()
			for RLIMIT_NOFILE. [RT #17526]

	--- 9.4.2-P1 released ---

2375.   [security]      Fully randomize UDP query ports to improve
			forgery resilience. [RT #17949]

	--- 9.4.2 released ---
	--- 9.4.2rc2 released ---

2259.	[bug]		Reverse incorrect LIBINTERFACE bump of libisc
			in 9.4.2rc1.  Applications built against 9.4.2rc1
			will need to be rebuilt.

2258.	[bug]		Fallback from IXFR/TSIG to SOA/AXFR/TSIG broken.
			[RT #17241]

2257.	[bug]		win32: Use the full path to vcredist_x86.exe when
			calling it. [RT #17222]

2256.	[bug]		win32: Correctly register the installation location of
			bindevt.dll. [RT #17159]

2255.	[bug]		L.ROOT-SERVERS.NET is now 199.7.83.42.

2254.	[bug]		timer.c:dispatch() failed to lock timer->lock
			when reading timer->idle allowing it to see
			intermediate values as timer->idle was reset by
			isc_timer_touch(). [RT #17243]

	--- 9.4.2rc1 released ---

2251.	[doc]		Update memstatistics-file documentation to reflect
			reality. Note there is behaviour change for BIND 9.5.
			[RT #17113]

2249.   [bug]           Only set Authentic Data bit if client requested
                        DNSSEC, per RFC 3655 [RT #17175]

2248.   [cleanup]       Fix several errors reported by Coverity. [RT #17160]

2245.	[bug]		Validating lack of DS records at trust anchors wasn't
			working. [RT #17151]

2238.	[bug]		It was possible to trigger a REQUIRE when a
			validation was cancelled. [RT #17106]
